tests/functional/lang/eval-fail-nested-list-items.err.exp
error:
       … while evaluating a path segment
         at /pwd/lang/eval-fail-nested-list-items.nix:13:3:
           12| + (
           13|   let
             |   ^
           14|     v = [

       error: cannot coerce a list to a string: [ [ 1 2 3 4 5 6 7 8 ] [ 1 «3 items elided» ] ]
